fixed column margin misalignments

--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,6 @@ input::placeholder {
 }
 
 .form-control {
-    margin: 5px;
     font-size: medium;
     font-family: 'Montserrat', sans-serif;
 }
